--- a/web-app/public/css/main.css
+++ b/web-app/public/css/main.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
+/* UTILS */
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
+/***/
+
 html, body {
   margin: 0;
   padding: 0;
