--- a/web-app/public/css/main.css
+++ b/web-app/public/css/main.css
@@ -218,6 +218,45 @@ html, body {
 	padding-left: 10px;
 }
 
+@media(max-width: 1060px){
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer .airhorn-count {
+    margin-bottom: 28px;
+  }
+
+  .airhorn-count .stats-toggler .stats-btn {
+    margin-left: 60px;
+  }
+
+  .stats-panel {
+    left: calc(50% - 113px);
+  }
+
+  .footer .main-text {
+    max-width: 100%;
+  }
+
+  .social {
+    margin-top: 28px;
+    justify-content: center;
+  }
+}
+
+@media(max-width: 690px){
+  .video-airhorn {
+    max-width: 90%;
+  }
+
+  .social {
+    display: none;
+  }
+}
+
+/* ANIMATIONS */
 @keyframes crossfade-one {
   from {
     transform: translate3d(0px, 255px, 0px);
@@ -229,7 +268,6 @@ html, body {
   }
 }
 
-/* ANIMATIONS */
 @keyframes crossfade-one-reverse {
   from {
     transform: translate3d(0px, 0px, 0px);
