--- a/templates/manage.gohtml
+++ b/templates/manage.gohtml
@@ -25,12 +25,12 @@
       </tr>
       </thead>
       <tbody>
-      {{ range _, $g := .AirhornGuilds }}
+      {{ range _, $g := .Data.AirhornGuilds }}
       <tr>
         <td><img src="{{ $g.Icon }}" class="guild-logo"></td>
         <td><b>{{ $g.Name }}</b></td>
-        <td>{{ $g.SoundsCount }}</td>
-        <td>{{ $g.Plays }}</td>
+        <td>{{ len $g.Sounds }}</td>
+		<!--<td>{\{ $g.Plays }}</td>-->
       </tr>
       {{ end }}
       </tbody>
@@ -46,7 +46,7 @@
       </tr>
       </thead>
       <tbody>
-      {{ range _, $g := .BoringGuilds }}
+      {{ range _, $g := .Data.BoringGuilds }}
       <tr>
         <td><img src="{{ $g.Icon }}" class="guild-logo"></td>
         <td><b>{{ $g.Name }}</b></td>
