--- a/templates/manage.gohtml
+++ b/templates/manage.gohtml
@@ -1,21 +1,14 @@
 {{ template "head.gohtml" .Context }}
 <div class="section manage-section" id="manage-section">
   <div class="container">
-    <div class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <h1 class="title is-2">Manage my !airhorn</h1>
-        </div>
-      </div>
-      <div class="level-right">
-        <div class="level-item">
-          <a class="back-home" href="{{ .Context.SiteURL }}/">Back</a>
-        </div>
-      </div>
+    <div class="header">
+		  <h1 class="title">Manage my !airhorn</h1>
+      <a class="back" href="{{ .Context.SiteURL }}/">Back</a>
     </div>
 
-    <h2 class="title is-3">Guilds with !airhorn</h2>
-    <table id="airhorn-guilds" class="table guild-list">
+		<section>
+      <h2 class="section-title">Your Guilds with !airhorn</h2>
+    <table id="airhorn-guilds" class="guild-list">
       <thead>
       <tr>
         <th></th>
@@ -25,28 +18,32 @@
       </tr>
       </thead>
       <tbody>
-      {{ range _, $g := .Data.AirhornGuilds }}
+      {{ range $g := .Data.AirhornGuilds }}
       <tr>
         <td><img src="{{ $g.Icon }}" class="guild-logo"></td>
-        <td><b>{{ $g.Name }}</b></td>
+				<td><a href="{{ .Context.SiteURL }}/manage/{{ $g.ID }}">
+				  <b>{{ $g.Name }}</b>
+				</a></td>
         <td>{{ len $g.Sounds }}</td>
 		<!--<td>{\{ $g.Plays }}</td>-->
       </tr>
       {{ end }}
       </tbody>
     </table>
+		</section>
 
-    <h2 class="title is-3">Boring guilds</h2>
-    <table id="boring-guilds" class="table guild-list">
+		<section>
+    <h2 class="section-title">Boring guilds</h2>
+    <table id="boring-guilds" class="guild-list">
       <thead>
       <tr>
-        <th></th>
+        <th class="guild-icon"></th>
         <th>Guild name</th>
         <th></th>
       </tr>
       </thead>
       <tbody>
-      {{ range _, $g := .Data.BoringGuilds }}
+      {{ range $g := .Data.BoringGuilds }}
       <tr>
         <td><img src="{{ $g.Icon }}" class="guild-logo"></td>
         <td><b>{{ $g.Name }}</b></td>
@@ -55,6 +52,7 @@
       {{ end }}
       </tbody>
     </table>
+		</section>
   </div>
 </div>
 {{ template "footer.gohtml" .Context }}
