--- a/templates/manage.gohtml
+++ b/templates/manage.gohtml
@@ -18,10 +18,11 @@
       </tr>
       </thead>
       <tbody>
+      {{ $ctx := . }}
       {{ range $g := .Data.AirhornGuilds }}
       <tr>
         <td><img src="{{ $g.Icon }}" class="guild-logo"></td>
-				<td><a href="{{ .Context.SiteURL }}/manage/{{ $g.ID }}">
+				<td><a href="{{ $ctx.Context.SiteURL }}/manage/{{ $g.ID }}">
 				  <b>{{ $g.Name }}</b>
 				</a></td>
         <td>{{ len $g.Sounds }}</td>
