--- a/templates/sound.gohtml
+++ b/templates/sound.gohtml
@@ -5,7 +5,7 @@
   <a class="back" href="{{ .Context.SiteURL }}/manage/{{ .Data.GuildID }}">Back</a>
 </div>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data" action="{{ .Context.SiteURL }}/manage/{{ .Data.GuildID }}/sound/{{ .Data.ID }}">
   <div class="field">
     <label>Sound name</label>
     <input type="text" name="name" placeholder="Airhorn" value="{{ .Data.Name }}" required>
@@ -16,7 +16,7 @@
     <input type="text" name="commands" placeholder="airhorn" value="{{ .Data.Commands }}" required>
     <p class="help">Command to type preceded by "!" (you don't need to type the "!")</p>
   </div>
-  {{ if .Data.ID == "" }}
+  {{ if eq .Data.ID "" }}
   <div class="field">
     <label>Sound file</label>
     <input type="file" name="file" accept=".mp3, .ogg, .dca">
