--- a/templates/sound.gohtml
+++ b/templates/sound.gohtml
@@ -1,5 +1,6 @@
 {{ template "head.gohtml" .Context }}
 <body>
+<div class="content">
 <div class="header">
   <h1 class="title">Editing sound</h1>
   <a class="back" href="{{ .Context.SiteURL }}/manage/{{ .Data.GuildID }}">Back</a>
@@ -9,24 +10,25 @@
   <div class="field">
     <label>Sound name</label>
     <input type="text" name="name" placeholder="Airhorn" value="{{ .Data.Name }}" required>
-    <p class="help">Only displayed in the manager interface (here)</p>
+    <p class="hint">Only displayed in the manager interface (here)</p>
   </div>
   <div class="field">
     <label>Command</label>
-    <input type="text" name="commands" placeholder="airhorn" value="{{ .Data.Commands }}" required>
-    <p class="help">Command to type preceded by "!" (you don't need to type the "!")</p>
+    <input type="text" name="commands" placeholder="airhorn" value="{{ .Data.CommandsString }}" required>
+    <p class="hint">Command to type preceded by "!" (you don't need to type the "!")</p>
   </div>
   {{ if eq .Data.ID "" }}
   <div class="field">
     <label>Sound file</label>
     <input type="file" name="file" accept=".mp3, .ogg, .dca">
-    <p class="help">
-      Maximum size: 500KB <i>tip: <a href="https://github.com/bwmarrin/dca">Discord Audio (.dca) file</a> are smaller!</i>
+    <p class="hint">
+      Maximum size: 500KB <i>(tip: <a href="https://github.com/bwmarrin/dca">Discord Audio (.dca) file</a> are smaller!)</i>
     </p>
   </div>
   {{ end }}
 
-  <input type="submit">
+  <input type="submit" value="Submit">
 </form>
+</div>
 
 {{ template "footer.gohtml" .Context }}
