[web] use content div for guild list

--- a/templates/manage.gohtml
+++ b/templates/manage.gohtml
@@ -1,5 +1,5 @@
 {{ template "head.gohtml" .Context }}
-<div class="section manage-section" id="manage-section">
+<div class="content manage-section" id="manage-section">
   <div class="container">
     <div class="header">
 		  <h1 class="title">Manage my !airhorn</h1>
