--- a/templates/partials/footer.gohtml
+++ b/templates/partials/footer.gohtml
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="{{ .SiteURL }}/css/footer.css">
+
 <div class="footer">
   <div id="stats-panel" class="stats-panel crossfade one-reverse is-hidden">
     <div class="stats-row">
@@ -79,6 +81,6 @@
 </div>
 
 <!-- Scripts -->
-<script type="text/javascript" src="{{ .SiteURL }}/js/footer.js"></script>
+<script type="text/javascript" src="{{ .SiteURL }}/js/footer.js" async></script>
 </body>
 </html>
