--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -3,6 +3,6 @@
 	<div class="content">
 		<p>You need to connect your Discord account to see this page!</p>
 
-		<a href="{{ .Context.SiteURL }}/login" class="button">LOGIN</a>
+		<a href="{{ .Context.SiteURL }}/login?nobot=1" class="button">LOGIN</a>
 	</div>
 {{ template "footer.gohtml" .Context }}
